--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-    <nav id="navhome" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #ffffff;">
+    <nav id="navhome" class="navbar navbar-expand-lg navbar-light fixed-top">
         <a class="navbar-brand" href="#">
             <img src="{{ asset('img/library/maptrip.png') }}" width="32" height="32" class="d-inline-block align-top" alt="">
             HappyBizTrip
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#">{% trans %}Home{% endtrans %} <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">{% trans %}Features{% endtrans %}</a>
+                <a class="nav-item nav-link" href="#">{% trans %}Concept{% endtrans %}</a>
                 <a class="nav-item nav-link" href="#">{% trans %}Pricing{% endtrans %}</a>
                 <a class="nav-item nav-link" href="#">{{ locale }}</a>
             </div>
@@ -35,7 +35,7 @@
                 </li>
             </ul>
             <a href="#">
-                <button class="btn btn-outline-dark btn-sm my-2 my-sm-0">{% trans %}Sign in{% endtrans %}</button>
+                <button class="btn btn-outline-happyDarkBlue btn-sm my-2 my-sm-0">{% trans %}Sign in{% endtrans %}</button>
             </a>
         </div>
     </nav>
@@ -45,13 +45,173 @@
             <div class="row align-items-center">
                 <div class="col-md-7">
                     <h1 class="display-4 home-title">{% trans %}Welcome to HappyBizTrip {% endtrans %}</h1>
+                    <p class="lead home-title home-subtitle">{% trans %}Make your trip a fun...{% endtrans %}</p>
                     <img class="home-img" src="{{ asset('img/library/imgHomepage.png') }}" alt="">
                 </div>
-                <div class="col-md-4"><p>OK</p></div>
+                <div class="col-md-4">
+                    <div class="card mt-1">
+                        <div class="card-header text-center card-entete">
+                            <h4><strong>{% trans %}Not registered ?{% endtrans %}</strong></h4>
+                            <h4><strong>{% trans %}It's time to get started !{% endtrans %}</strong></h4>
+                        </div>
+                        <form>
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputPassword1">Password</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                </div>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="submit" class="btn btn-register btn-block">{% trans %}Registrer{% endtrans %}</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    
+    <div class="container">
+        <p class="concept-title">{% trans %}The Concept{% endtrans %}</p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ullamcorper eget nulla facilisi etiam dignissim. Elementum sagittis vitae et leo duis ut. 
+            Dictum at tempor commodo ullamcorper a. Ornare lectus sit amet est placerat in egestas. 
+            Lectus magna fringilla urna porttitor rhoncus. Ut pharetra sit amet aliquam id diam. 
+            Est velit egestas dui id ornare arcu odio. Elit sed vulputate mi sit. Odio euismod lacinia at quis. 
+            Duis at consectetur lorem donec massa sapien faucibus. Tempor orci dapibus ultrices in iaculis nunc sed augue lacus. 
+            Fusce id velit ut tortor pretium viverra suspendisse potenti. Id diam maecenas ultricies mi eget. 
+            Aliquam eleifend mi in nulla posuere sollicitudin aliquam. Porttitor massa id neque aliquam vestibulum. 
+            Molestie nunc non blandit massa enim nec. 
+            Maecenas volutpat blandit aliquam etiam.
+        </p>
+        <p>
+            Non blandit massa enim nec dui nunc mattis enim ut. Ante metus dictum at tempor commodo ullamcorper. Mattis pellentesque id nibh tortor. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Sit amet aliquam id diam maecenas ultricies. Fringilla urna porttitor rhoncus dolor purus non enim. Malesuada fames ac turpis egestas integer eget aliquet nibh. Faucibus a pellentesque sit amet porttitor eget dolor morbi. Ut pharetra sit amet aliquam. Et sollicitudin ac orci phasellus egestas tellus rutrum tellus. Et malesuada fames ac turpis egestas sed tempus urna. Consequat interdum varius sit amet mattis.
+        </p>
+        <p class="pricing-title mt-5 mb-4">{% trans %}Pricing{% endtrans %}</p>
+        <div class="row">
+            <div class="col-md-4 col-lg-4">
+                <div class="card border-happyGreen mb-3">
+                    <div class="card-header">
+                        Commitment
+                    </div>
+                    <div class="card-body">
+                        <span class="card-title">15,99 &euro;</span>
+                        <span class="frequency"> / mois</span>
+                        <hr>
+                        <h6 class="card-text">Engagement minimum de 12 mois</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+                <div class="card border-happyGreen mb-3">
+                    <div class="card-header">
+                        Permanent
+                    </div>
+                    <div class="card-body">
+                        <span class="card-title">15,99 &euro;</span>
+                        <span class="frequency"> / mois</span>
+                        <hr>
+                        <h6 class="card-text">Engagement minimum de 12 mois</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+                <div class="card border-happyGreen mb-3">
+                    <div class="card-header">
+                        Permanent
+                    </div>
+                    <div class="card-body">
+                        <span class="card-title">15,99 &euro;</span>
+                        <span class="frequency"> / mois</span>
+                        <hr>
+                        <h6 class="card-text">Engagement minimum de 12 mois</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-lg-4">
+                <div class="card border-happyGreen mb-3">
+                    <div class="card-header">
+                        Permanent
+                    </div>
+                    <div class="card-body">
+                        <span class="card-title">15,99 &euro;</span>
+                        <span class="frequency"> / mois</span>
+                        <hr>
+                        <h6 class="card-text">Engagement minimum de 12 mois</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+                <div class="card border-happyGreen mb-3">
+                    <div class="card-header">
+                        Permanent
+                    </div>
+                    <div class="card-body">
+                        <span class="card-title">15,99 &euro;</span>
+                        <span class="frequency"> / mois</span>
+                        <hr>
+                        <h6 class="card-text">Engagement minimum de 12 mois</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-4">
+                <div class="card border-happyGreen mb-3">
+                    <div class="card-header">
+                        Permanent
+                    </div>
+                    <div class="card-body">
+                        <span class="card-title">15,99 &euro;</span>
+                        <span class="frequency"> / mois</span>
+                        <hr>
+                        <h6 class="card-text">Engagement minimum de 12 mois</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-12 col-md">
+            <small class="d-block mb-3 text-muted">&copy; 2017-2018</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Features</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Cool stuff</a></li>
+              <li><a class="text-muted" href="#">Random feature</a></li>
+              <li><a class="text-muted" href="#">Team feature</a></li>
+              <li><a class="text-muted" href="#">Stuff for developers</a></li>
+              <li><a class="text-muted" href="#">Another one</a></li>
+              <li><a class="text-muted" href="#">Last time</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Resource</a></li>
+              <li><a class="text-muted" href="#">Resource name</a></li>
+              <li><a class="text-muted" href="#">Another resource</a></li>
+              <li><a class="text-muted" href="#">Final resource</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Team</a></li>
+              <li><a class="text-muted" href="#">Locations</a></li>
+              <li><a class="text-muted" href="#">Privacy</a></li>
+              <li><a class="text-muted" href="#">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+    </footer>
 {% endblock %}
 
 {% block javascripts %}
