--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -97,13 +97,16 @@
             <div class="col-md-4 col-lg-4">
                 <div class="card border-happyGreen mb-3">
                     <div class="card-header">
-                        Commitment
+                        Free
                     </div>
                     <div class="card-body">
-                        <span class="card-title">15,99 &euro;</span>
+                        <span class="card-title">0,00 &euro;</span>
                         <span class="frequency"> / mois</span>
+                        <ul class="list-unstyled">
+                            <li>Discover the website</li>
+                        </ul>
                         <hr>
-                        <h6 class="card-text">Engagement minimum de 12 mois</h6>
+                        <h6 class="card-text">Features limited</h6>
                     </div>
                 </div>
             </div>
