--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,11 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+
+         
+        {# include footer #}
+        {% include 'include/footer.html.twig' %}
+
         {% block javascripts %}
             {{ encore_entry_script_tags('js/app') }}
         {% endblock %}
