--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         <title>HappyBizTrip - {% block title %}{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('css/global') }}
+            <link rel="stylesheet" href="fontawesome/css/all.min.css">
         {% endblock %}
     </head>
     <body>
