--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -24,7 +24,7 @@ body {
   background-color: $happyGrey;
 }
 
-.btn-outline-darkblue:hover {
+.btn-outline-happyDarkBlue:hover {
   color: #ffffff;
 }
 
