--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -17,7 +17,7 @@ $happyOrange: #f5853b;
     }
 }
 
-// for smalk screen
+// for small screen
 @media (max-width: 576px) {
     .home-img {
         margin-bottom: 1rem;
