--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ app.request.locale }}">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>HappyBizTrip - {% block title %}{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('css/global') }}
-            <link rel="stylesheet" href="fontawesome/css/all.min.css">
+            <link rel="stylesheet" href="/fontawesome/css/all.min.css">
         {% endblock %}
     </head>
     <body>
         {# include header #}
-        {% include 'include/header.html.twig' %}
+        {% include 'partials/header.html.twig' %}
         
         {% block body %}{% endblock %}
          
         {# include footer #}
-        {% include 'include/footer.html.twig' %}
+        {% include 'partials/footer.html.twig' %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('js/app') }}
