--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,17 +24,6 @@
                     <form>
                         <div class="card-body">
                             <div class="form-group">
-                                <span class="pr-2">{% trans %}I am a{% endtrans %}</span>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="radioWoman" name="radioGender" class="custom-control-input" value="W" checked>
-                                    <label class="custom-control-label" for="radioWoman"><i class="fas fa-female pr-1"></i>{% trans %}Woman{% endtrans %}</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="radioMan" name="radioGender" class="custom-control-input" value="M">
-                                    <label class="custom-control-label" for="radioMan"><i class="fas fa-male pr-1"></i>{% trans %}Man{% endtrans %}</label>
-                                </div>
-                            </div>
-                            <div class="form-group">
                                 <label for="pseudo">{% trans %}Pseudonym{% endtrans %}</label>
                                 <input type="text" class="form-control" id="pseudo" aria-describedby="pseudoHelp" placeholder="{% trans %}Define a pseudonym{% endtrans %}">
                                 <small id="pseudoHelp" class="form-text text-muted">{% trans %}Minimum Length : 5 characters{% endtrans %}</small>
@@ -59,7 +48,7 @@
                             </div>
                         </div>
                         <div class="card-footer text-center">
-                            <button type="submit" class="btn btn-register btn-block">{% trans %}Registrer{% endtrans %}</button>
+                            <button type="submit" class="btn btn-register btn-block">{% trans %}Register{% endtrans %}</button>
                         </div>
                     </form>
                 </div>
