--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -8,27 +8,27 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">{% trans %}Home{% endtrans %} <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">{% trans %}Concept{% endtrans %}</a>
-            <a class="nav-item nav-link" href="#">{% trans %}Pricing{% endtrans %}</a>
+            <a class="nav-item nav-link active" href="#">{{ 'menu.home_home'|trans }} <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">{{ 'menu.home_concept'|trans }}</a>
+            <a class="nav-item nav-link" href="#">{{ 'menu.home_price'|trans }}</a>
             <a class="nav-item nav-link" href="#">{{ locale }}</a>
         </div>
         <ul class="navbar-nav ml-auto mr-4">
             <li class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" id="locales">
-                    <i class="fa fa-globe"></i> {{ app.request.locale }}
+                    <i class="fa fa-globe" id="lang"></i> {{ app.request.locale|capitalize }}
                 </a>
-                <div class="dropdown-menu dropdown-menu-center" aria-labelledby="locales">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="locales">
                     {% for locale in locales() %}
                         {% if app.request.locale != locale.code %}
-                            <a class="dropdown-item" href="{{ path(app.request.get('_route', 'blog_index'), app.request.get('_route_params', [])|merge({_locale: locale.code})) }}">{{ locale.name|capitalize }} <small>{{ locale.code[0:2] }}</small></a>
+                            <a class="dropdown-item" href="{{ path(app.request.get('_route', 'blog_index'), app.request.get('_route_params', [])|merge({_locale: locale.code})) }}">{{ locale.name|capitalize }}</a>
                         {% endif %}
                     {% endfor %}
                 </div>
             </li>
         </ul>
         <a href="#">
-            <button class="btn btn-outline-happyDarkBlue btn-sm my-2 my-sm-0">{% trans %}Sign in{% endtrans %}</button>
+            <button class="btn btn-outline-happyDarkBlue btn-sm my-2 my-sm-0">{{ 'menu.home_sign_in'|trans }}</button>
         </a>
     </div>
 </nav>
