--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="footer mt-3 pt-4 pt-md-5 border-top" style="position: {{ positionFooter }};">
+<footer class="footer mt-3 pt-4 pt-md-5 border-top">
   <div class="container">
       <div class="row">
           <div class="col-md-4 col-lg-4">
