--- a/assets/css/login.scss
+++ b/assets/css/login.scss
@@ -11,6 +11,12 @@ $happyOrange: #f5853b;
     }
 }
 
+.title-form {
+    font-family: "Dancing Script";
+    font-size: 2rem;
+    color: $happyDarkBlue;
+}
+
 .card {
     max-width: 30rem;
     min-width: 20rem;
