--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,7 +1,7 @@
 <nav id="navhome" class="navbar navbar-expand-lg navbar-light fixed-top">
     <a class="navbar-brand" href="#">
         <img src="{{ asset('img/library/hbtlogo.png') }}" width="32" height="32" class="d-inline-block align-top" alt="">
-        HappyBizTrip
+        <span class="nav-title">HappyBizTrip</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
