--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -3,6 +3,12 @@ $happyDarkBlue: #7fadc5;
 $happyOrange: #f5853b;
 $happyGrey: #f5f5f5;
 
+// Additionnal font
+@font-face {
+  font-family: "Dancing Script";
+  src: url("/font/DancingScript-VariableFont_wght.ttf");
+}
+
 // Custom Bootstrap
 $theme-colors: (
   happyDarkBlue: $happyDarkBlue,
@@ -23,6 +29,12 @@ body {
   bottom: 0;
   width: 100%;
   background-color: $happyGrey;
+}
+
+.nav-title {
+  font-family: "Dancing Script";
+  color: $happyDarkBlue;
+  font-weight: 600;
 }
 
 .btn-outline-happyDarkBlue:hover {
