--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,9 +7,24 @@
 {% endblock %}
 
 {% block body %}
+
+    {# management of error messages in form #}
+    {% set boolEmail = false %}
+    {% set boolPassword = false %}
+    {% if error %}
+        <p>{{ error.messageKey }}</p>
+        {% if 'Email' in error.messageKey %}
+            {% set boolEmail = true %}
+        {% endif %}
+        {% if 'Invalid credentials' in error.messageKey %}
+            {% set boolPassword = true %}
+        {% endif %}
+    {% endif %}
+
     <div class="container">
         <div class="d-flex justify-content-center p-2">
-            <img src="{{ asset('img/library/hbtlogo.png') }}" width="72" height="72" alt="">
+            <img src="{{ asset('img/library/hbtlogo.png') }}" width="56" height="56" alt="">
+            <span class="title-form pt-2">HappyBizTrip</span>
         </div>
         <div class="d-flex justify-content-center pt-2">
             <div class="card mb-3">
@@ -19,10 +34,13 @@
                 <div class="card-body">
                     <form method="POST">
                         {% if error %}
-                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                            {% if boolEmail == false and boolPassword == false %}
+                                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                            {% endif %}
                         {% endif %}
 
-                        {% if app.user %}
+                       {# A REVOIR #}
+                        {% if app.user %}  
                             <div class="mb-3">
                                 You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
                             </div>
@@ -30,11 +48,13 @@
 
                         <div class="form-group">
                             <label for="inputEmail">{{ 'form.label_email'|trans }}</label>
-                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control
+                            {% if boolEmail %} is-invalid {% else %} is-valid {% endif %}" required autofocus>
                         </div>
                         <div class="form-group">
                             <label for="inputPassword">{{ 'form.label_password'|trans }}</label>
-                            <input type="password" name="password" id="inputPassword" class="form-control" required>
+                            <input type="password" name="password" id="inputPassword" class="form-control
+                            {% if boolPassword %} is-invalid {% else %} is-valid {% endif %}" required>
                         </div>
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                         {#
