--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,69 +26,98 @@
             <img src="{{ asset('img/library/hbtlogo.png') }}" width="56" height="56" alt="">
             <span class="title-form pt-2">HappyBizTrip</span>
         </div>
-        <div class="d-flex justify-content-center pt-2">
-            <div class="card mb-3">
-                <div class="card-header text-white text-center">
-                    <h4>{{ 'login.card_header'|trans }}</h4>
+        {% if app.user %}
+            <div class="d-flex justify-content-center pt-2">
+                <div class="alert alert-info" role="alert" style="min-width: 20rem; max-width: 30rem;">
+                    <h4 class="alert-heading">{{ 'login.alert.heading'|trans }}</h4>
+                    <hr>
+                    <p class="alert-connected">{{ 'login.alert.msg_loggued'|trans }}
+                    <br><strong>{{ app.user.username }}</strong></p>
+                    <hr>
+                    <p class="alert-connected">
+                        <a href="{{ path('homepage') }}"
+                            <button type="button" class="btn btn-homepage btn-sm">
+                                    <i class="fas fa-home"></i>&nbsp;
+                                    {{ 'login.alert.btn_home'|trans }}
+                            </button>
+                        </a>
+                        <a href="{{ path('hbt_logout') }}"
+                            <button type="button" class="btn btn-disconnect btn-sm">
+                                    <i class="fas fa-sign-out-alt"></i>&nbsp;
+                                    {{ 'login.alert.btn_disconnect'|trans }}
+                            </button>
+                        </a>
+                    </p>
                 </div>
-                <div class="card-body">
-                    <form method="POST">
-                        {% if error %}
-                            {% if boolEmail == false and boolPassword == false %}
-                                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            </div>
+        {% else %}
+            <div class="d-flex justify-content-center pt-2">
+                <div class="card mb-3">
+                    <div class="card-header text-white text-center">
+                        <h4>{{ 'login.card_header'|trans }}</h4>
+                    </div>
+                    <div class="card-body">
+                        <form method="POST">
+                            {% if error %}
+                                {% if boolEmail == false and boolPassword == false %}
+                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
-
-                       {# A REVOIR #}
-                        {% if app.user %}  
-                            <div class="mb-3">
-                                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                        
+                            <div class="form-group">
+                                <label for="inputEmail">{{ 'form.label_email'|trans }}</label>
+                                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control
+                                {% if boolEmail %} is-invalid{% endif %}" required autofocus>
+                                {% if boolEmail %}
+                                    <div class="invalid-feedback">
+                                        {{ 'login.form.feedback_email'|trans }}
+                                    </div>
+                                {% endif %}
                             </div>
-                        {% endif %}
-
-                        <div class="form-group">
-                            <label for="inputEmail">{{ 'form.label_email'|trans }}</label>
-                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control
-                            {% if boolEmail %} is-invalid {% else %} is-valid {% endif %}" required autofocus>
-                        </div>
-                        <div class="form-group">
-                            <label for="inputPassword">{{ 'form.label_password'|trans }}</label>
-                            <input type="password" name="password" id="inputPassword" class="form-control
-                            {% if boolPassword %} is-invalid {% else %} is-valid {% endif %}" required>
-                        </div>
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                        {#
-                            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                            See https://symfony.com/doc/current/security/remember_me.html
-
-                            <div class="checkbox mb-3">
-                                <label>
-                                    <input type="checkbox" name="_remember_me"> Remember me
-                                </label>
+                            <div class="form-group">
+                                <label for="inputPassword">{{ 'form.label_password'|trans }}</label>
+                                <input type="password" name="password" id="inputPassword" class="form-control
+                                {% if boolPassword %} is-invalid {% endif %}" required>
+                                {% if boolPassword %}
+                                    <div class="invalid-feedback">
+                                        {{ 'login.form.feedback_password'|trans }}
+                                    </div>
+                                {% endif %}
                             </div>
-                        #}
-                        <button type="submit" class="btn btn-login btn-block">
-                            <i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;{{ 'form.btn_login'|trans }}
-                        </button>
-                    </form>
-                </div>
-                <div class="card-footer">
-                    <div class="row mt-2">
-                        <div class="col-4">
-                            <p id="p-left">
-                                <i class="fas fa-home"></i>&nbsp;
-                                <a href="{{ path('homepage')}}">{{ 'login.home.card_footer'|trans }}</a>
-                            </p>
-                        </div>
-                        <div class="col-8">
-                            <p id="p-right">
-                                <i class="fas fa-user-lock"></i>&nbsp;
-                                <a href="#">{{ 'login.password.card_footer'|trans }}</a>
-                            </p>
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                            {#
+                                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                                See https://symfony.com/doc/current/security/remember_me.html
+
+                                <div class="checkbox mb-3">
+                                    <label>
+                                        <input type="checkbox" name="_remember_me"> Remember me
+                                    </label>
+                                </div>
+                            #}
+                            <button type="submit" class="btn btn-login btn-block">
+                                <i class="fas fa-sign-in-alt"></i>&nbsp;&nbsp;{{ 'form.btn_login'|trans }}
+                            </button>
+                        </form>
+                    </div>
+                    <div class="card-footer">
+                        <div class="row mt-2">
+                            <div class="col-4">
+                                <p id="p-left">
+                                    <i class="fas fa-home"></i>&nbsp;
+                                    <a href="{{ path('homepage')}}">{{ 'login.home.card_footer'|trans }}</a>
+                                </p>
+                            </div>
+                            <div class="col-8">
+                                <p id="p-right">
+                                    <i class="fas fa-user-lock"></i>&nbsp;
+                                    <a href="#">{{ 'login.password.card_footer'|trans }}</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </div>
 {% endblock %}
