change text color of navbar

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -34,9 +34,9 @@
                             </div>
                             <label for="birthday">{{ 'form.label_birth'|trans }}</label>
                             <div class="input-group date mb-3" id="date-container">
-                                <div class="input-group-append">
+                                <div class="input-group-prepend">
                                     <span class="input-group-text">
-                                        <i class="fas fa-calendar-alt"></i>
+                                        <i class="far fa-calendar-alt"></i>
                                     </span>
                                 </div>
                                 <input type="text" id="home_register_birthdayDate" name="home_register[birthdayDate]" required="required" class="js-datepicker form-control" />
