--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,5 +1,6 @@
 // Colors
 $happyDarkBlue: #7fadc5;
+$HappyPurple: #3f4253;
 $happyOrange: #f5853b;
 $happyGrey: #f5f5f5;
 
@@ -22,6 +23,16 @@ $theme-colors: (
 body {
   margin-top: 60px;
   background-color: white;
+}
+
+// change text color of navbar
+.navbar-nav {
+  .nav-link {
+    color: $happyDarkBlue !important;
+  }
+  .nav-link.active {
+    color: $HappyPurple !important;
+  }
 }
 
 .footer {
