add bootstrap datepicker and implement in home index page

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,6 +6,7 @@
 {% block stylesheets %}
     {{ parent() }}
     {{ encore_entry_link_tags('css/home') }}
+    {{ encore_entry_link_tags('css/datepicker/datepicker') }}
 {% endblock %}
 
 {% block body %}
@@ -23,10 +24,22 @@
                         <h4><strong>{{ 'form.register_title'|trans }}</strong></h4>
                         <h4><strong>{{ 'form.register_subtitle'|trans }}</strong></h4>
                     </div>
-                    {{ form_start(form) }}
+                    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                         <div class="card-body">
                             {{ fieldRender.formFieldRender('pseudo', form.pseudo) }}
                             {{ fieldRender.formFieldRender('email', form.email) }}
+                            <div class="form-group">
+                                <label for="home_register_birthDate">{{ 'form.label_birth'|trans }}</label>
+                                <div class="input-group" id="date-container">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text">
+                                            <i class="far fa-calendar-alt"></i>
+                                        </span>
+                                    </div>
+                                    {{ form_widget(form.birthDate)}}
+                                </div>
+                                {{ form_help(form.birthDate) }}
+                            </div>
                             {{ fieldRender.formFieldRender('password', form.password) }}
                         </div>
                         <div class="card-footer text-center">
@@ -146,4 +159,28 @@
 
 {% block javascripts %}
     {{ parent() }}
+    {{ encore_entry_script_tags('js/datepicker/datepicker') }}
+    {% if app.request.locale == 'fr' %}
+        {{ encore_entry_script_tags('js/datepicker/datepicker-fr') }}
+    {% endif %}
+    <script>
+        $(document).ready(function () {
+            var lang = '{{ app.request.locale }}'
+            var formatDate = 'mm-dd-yyyy'
+            if (lang === 'fr') {
+              formatDate = 'dd-mm-yyyy'
+            }
+            $('.js-datepicker').datepicker({
+              container: '#date-container',
+              format: formatDate,
+              language: lang,
+              orientation: 'bottom auto',
+              startView: 2,
+              endDate: '-18y',
+              startDate: '-105y',
+              clearBtn: true,
+              autoclose: true
+            })
+        })
+    </script>
 {% endblock %}
