integration of toastr

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -19,6 +19,9 @@ $theme-colors: (
 // Import bootstrap
 @import "~bootstrap/scss/bootstrap";
 
+// import toastr
+@import "toastr";
+
 //
 body {
   margin-top: 60px;
